# simple-agent-framework

./: README.md  pyproject.toml
examples/: basic_example.py  bedrock_structured_output.py  pydantic_advanced_example.py  streaming_example.py
simple_agent/: __init__.py  agent.py  stream.py
simple_agent/models/: __init__.py  base.py  bedrock.py  openai.py
simple_agent/tools/: __init__.py  base.py
